k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-website-service
  labels:
    app: my-website
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: my-website
